# medicalordertreeview

./: GITHUB_PUSH_GUIDE.md  README_TW.md  doc_structure_analysis.json  main_items_analysis.json  main_items_detailed.json  test-table-integration.html
backend/: README.md  app.py  models.py  pyproject.toml
backend/cache/converted/: 0目錄1-114.09.01.docx  1第一部總則-114.05.01.docx  2-0第二部西醫-114.07.01.docx  2-1第二部第一章基本診療-114.09.01.docx  2-2-10第二部第二章第十節麻醉費-114.05.01.docx  2-2-1第二部第二章第一節檢查-114.09.01.docx  2-2-2第二部第二章第二節放射線診療-114.09.01.docx  2-2-3第二部第二章第三節注射-114.05.01.docx  2-2-4第二部第二章第四節復健治療-114.05.01.docx  2-2-5第二部第二章第五節精神醫療治療費-114.05.01.docx  2-2-6第二部第二章第六節治療處置-114.09.01.docx  2-2-8第二部第二章第八節輸血及造血幹細胞移植-114.09.01.docx  2-2-9第二部第二章第九節石膏繃帶-093.06.14.docx  3第三部牙醫-114.05.01.docx  4第四部中醫-114.05.01.docx  5第五部居家照護-113.09.01.docx  6-1第六部論病例計酬-114.09.01.docx  6-2第六部附錄102.01.01(1).docx  7-1 第七部第一章Tw-DRGs支付通則-113.09.01.docx  7-1-a 第七部第一章附表Tw-DRGs支付通則-113.12.01.docx  7-2 第七部第二章Tw-DRGs分類架構及原則-114.09.01.docx  8第八部 品質支付服務-114.05.01.docx  9第九部 護理人員投入為主之診療項目表-103.04.01.docx
backend/cache/doc-tables/: 0目錄1-114.09.01.json  1第一部總則-114.05.01.json  2-0第二部西醫-114.07.01.json  2-1第二部第一章基本診療-114.09.01.json  2-2-10第二部第二章第十節麻醉費-114.05.01.json  2-2-1第二部第二章第一節檢查-114.09.01.json  2-2-2第二部第二章第二節放射線診療-114.09.01.json  2-2-3第二部第二章第三節注射-114.05.01.json  2-2-4第二部第二章第四節復健治療-114.05.01.json  2-2-5第二部第二章第五節精神醫療治療費-114.05.01.json  2-2-6第二部第二章第六節治療處置-114.09.01.json  (+13 more)
backend/indexer/: builder.py  searcher.py
backend/parsers/: doc_parser.py
backend/scripts/: export_doc_tables.py  update_doc_table_mapping.py
(+120 files in other folders)
